[project]
name = "comfy_pixelization"
description = "ComfyUI node that pixelizes images."
version = "1.2.0"
license = "LICENSE"
requires-python = ">=3.10"

dependencies = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "numpy==2.3.0",
  "pillow==11.2.1",
]

[project.urls]
Repository = "https://github.com/filipemeneses/comfy_pixelization"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "filipemeneses"
DisplayName = "comfy_pixelization"
Icon = ""
